added test  hero img

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -67,7 +67,7 @@
 .callout-container {
   height: 100vh;
 
-  background: url('../img/whiskey-background.jpg') no-repeat bottom right fixed;
+  background: url('../img/web-development-framework.jpg') no-repeat top center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
