--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,6 +5,7 @@ body {
     font-size: 14px;
     color: #818181;
     line-height: 22px;
+    background: #18212a;
 }
 
 section {
@@ -41,9 +42,7 @@ a:hover {
   text-decoration: none;
 }
 
-.carousel-caption {
-  background: rgba(0, 0, 0, 0.3);
-}
+
 
 /* menu */
 
@@ -63,7 +62,19 @@ ul.navbar-nav li:last-child a {
   border-bottom: none;
 }
 
+.navbar-dark .navbar-toggler {
+  border: 1px solid #7dba5c;
+  border-color: rgba(125, 186, 92, 1);
+  border-radius: 0;
+}
 
+.navbar-dark .navbar-nav .nav-link.active {
+  color: #7dba5c;
+}
+
+.navbar-collapse {
+  padding-top: 20px;
+}
 /* about */
 
 .about-con ul {
@@ -105,17 +116,63 @@ ul.navbar-nav li:last-child a {
     width: auto;
     max-width: 680px;
     padding: 0 15px;
-  }
+   }
   
-  
-  .test {
-    border: 1px solid red;
-    /* background: blue;
-    z-index: 9999; */
-    margin-left: 200px;
-    background-color: transparent;
+   .row {
+    max-width: 1024px;
   }
 
+  .content-container {
+
+  }
+
+/* test */
+
+
+
+  .test {
+    border: 1px solid red;
+    /* background: blue;*/
+    /* z-index: 9999;  */
+    /* margin-left: 200px;
+    background-color: transparent; */
+  }
+
+  .box {
+    background-color: #444444;
+    text-align: center;
+    padding: 50px 0;
+    color: white;
+    font-size: 32px;
+    line-height: 32px;
+    border-radius: 6px;
+    margin-bottom: 20px;
+}
+
+.box strong {
+    margin-right: 5px;
+}
+
+.box-1 {
+    background-color: #ff4b9c;
+}
+
+.box-2 {
+    background-color: #4bedff;
+}
+
+.box-3 {
+    background-color: #4bffb6;
+}
+
+.box-4 {
+    background-color: #BA9BFF;
+}
+
+
+
+
+/* end test  */
 
  #cover-text, #cover-text h2 {
     color: #ffffff;
@@ -186,7 +243,8 @@ ul.navbar-nav li:last-child a {
 
 .callout-container {
   height: 100vh;
-  background: url('../img/web-development-framework.jpg') no-repeat top center fixed;
+  /* background: url('../img/web-development-framework.jpg') no-repeat top center fixed; */
+ background: #18212a;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -209,10 +267,7 @@ ul.navbar-nav li:last-child a {
   background-color: rgba(0, 0, 0, 0.5);
 }
 
-.content-container {
-  padding-top: 75px;
-  padding-bottom: 75px;
-}
+
 
 .inner {
   padding: 20px;
@@ -257,3 +312,90 @@ footer {
   padding: 20px 20px 0px 20px;
 }
 
+/* stars */
+
+.rating-box {
+  color: #f0f0f0;
+  text-shadow: 0px 1px 10px rgba(255, 255, 255, 1);
+  /* margin: 3rem auto; */
+  height: 3rem;
+  width: 25rem;
+ 
+}
+
+.rating-star {
+  font-family: "Font Awesome\ 5 Free";
+  font-weight: normal;
+  font-style: normal;
+  text-decoration: inherit;
+  -webkit-font-smoothing: antialiased;
+
+  font-size: 3rem;
+  width: 3rem;
+  height: 3rem;
+  padding: 0 2rem;
+  position: relative;
+  display: block;
+  float: left;
+  line-height: 3rem;
+}
+
+.full-star:before {
+  font-family: "Font Awesome\ 5 Free";
+  color: #f2b01e;
+  /* content: "\2605"; */
+  content:"\f005";
+  position: absolute;
+  left: 0;
+  overflow: hidden;
+}
+
+.empty-star:before {
+  /* content: "\2605"; */
+  content:"\f005";
+  position: absolute;
+  left: 0;
+  overflow: hidden;
+}
+
+.half-star:before {
+  color: #f2b01e;
+  /* content: "\2605"; */
+  content:"\f005";
+  width: 50%;
+  position: absolute;
+  left: 0;
+  overflow: hidden;
+}
+
+.half-star:after {
+  /* content: '\2605'; */
+  content:"\f005";
+  position: absolute;
+  left: 1.18rem;
+  width: 50%;
+  text-indent: -1.18rem;
+  overflow: hidden;
+}
+
+.rating-box span span {
+position: absolute;
+top: -80px;
+left: -9999px;
+z-index: 10;
+display: block;
+opacity: 0;
+padding: 2px 10px;
+font-family: Arial, Helvetica, sans-serif;
+font-size: 11px;
+/* font-weight: bold;
+background: #000; */
+color: #fff;
+white-space: nowrap;
+}
+
+.rating-box span:hover span {
+top: -35px;
+left: -5px;
+opacity: 1
+}
