--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -369,7 +369,7 @@ ul.navbar-nav li:last-child a {
 }
 
 .lead {
-  color: #818181;
+  color: #f7f7f7;
   margin: -37px -74px;
   border-bottom: 1px solid #7a7a7a;
   border-top: 1px solid #7a7a7a;
@@ -377,7 +377,7 @@ ul.navbar-nav li:last-child a {
   letter-spacing: 1px;
   font-size: 11px;
   font-weight: 700;
-  background: rgba(0, 0, 0, 0.5);
+  background: rgba(0, 0, 0, 0.7);
   position: absolute;
   text-align: center;
   top: 50vh;
