--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -17,10 +17,6 @@
     }
     .callout h1 {
         padding-top: 105px;
-        /* margin-top: 105px; */
-    }
-    .callout-container {
-        /* top: 105px; */
     }
     .lead {
         margin: 20px -74px;
@@ -127,7 +123,7 @@
             margin-left: 0px;
         }
         .callout-container {
-            background-position: center center;
+            /* background-position: center center; */
         }
         .lead {
              margin: 77px -69px; 
@@ -167,12 +163,11 @@
 
 /* Extra large devices (large desktops, 1200px and up) */
 
-/* @media (min-width: 1200px) {
+ @media (min-width: 1200px) {
      .callout-container {
-        background-position-x: 200px; 
+       background-position: center center;
     } 
 
     
 } 
 
-*/
