--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -145,10 +145,10 @@ ul.navbar-nav li:last-child a {
 }
 .social .linkedin {
   color: #0077b5;
-  margin: 0 26px 0 30px
 }
 .social .github {
-  color: #24292e;
+  color: #7c848b;
+  margin: 0 26px 0 30px
 }
 
 
